Password extension for registration form.

--- a/food_delivery/auth_app/templates/registration.html
+++ b/food_delivery/auth_app/templates/registration.html
@@ -21,6 +21,10 @@
             {{ form.password }}<br>
         </div>
 
+        <div>
+            {{ form.password_confirm }}<br>
+        </div>
+
         <button type="submit">Зарегистрироваться</button>
     </form>
 </body>
