--- a/food_delivery/auth_app/templates/registration.html
+++ b/food_delivery/auth_app/templates/registration.html
@@ -1,23 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/registration.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .btn-black {
-            background-color: #000;
-            color: #fff;
-            border: 1px solid #000;
-            transition: all 0.3s ease;
-        }
-        .btn-black:hover {
-            background-color: #fff;
-            color: #000;
-            border: 1px solid #000;
-        }
-    </style>
 </head>
 <body class="bg-light">
 
