--- a/food_delivery/auth_app/templates/login.html
+++ b/food_delivery/auth_app/templates/login.html
@@ -42,6 +42,11 @@
                     <button type="submit" class="btn btn-black">Login</button>
                 </div>
             </form>
+
+            <div class="text-center mt-3">
+                Ещё нет аккаунта?
+                <a href="{% url 'register' %}">Войти</a>
+            </div>
         </div>
     </div>
 </body>
